incorporating org.elasticsearch.test.integration single node tests